  of troff. The "-r" option was introduced to change it.
* eqn: Handles "\[]" and "\*[]" now.
* troff, dpost: Device and font descriptions are now read directly from
  text files; the "makedev" utility is no longer needed.
* [nt]roff: The ".xflag" request controls the availability of extensions
  like the "-x" and "-X" command line options.
* The file "NEWS" describes new troff language features.
* [nt]roff: There is no static limit on the number of "-m" options anymore.
* [nt]roff: There is no static limit on the ".hw" table anymore.
* [nt]roff: There is no static limit on the pushback buffer anymore; this
  makes it possible to use longer arguments to macros.
* [nt]roff: The output of long names with ".pm" and stack dumps has been
  fixed.
* [nt]roff: Nested long-name string references \*[\*...] now work.
* [nt]roff: Tabulators as in ".XY\t" are now correctly handled with -x.
* The "-man" macro no longer produces cut marks when used with troff.
* tbl: Two bugs that had been introduced with support for lines of unlimited
  length have been fixed. They resulted in printing a stray character when
  more than one input file was used, and in improper handling of input lines
  continued with a backslash.
* A new malloc() replacement has been added for performance reasons.
* A bug in the previously supplied realloc() replacement could result in
  heap corruption.

Release 050816
* nroff: A special terminal name, -Tlocale, has been introduced. With this
  option, UTF-8 output is generated if permitted by the current LC_CTYPE
  locale, and regular -Tlp output otherwise.
* [nt]roff: A new option, "-x", enables the recognition of extended
  features that may affect compatibility with previous versions. The "-X"
  option disables these features; this is currently the default. Note
  that the features enabled with -x are under development and subject
  to change.
* [nt]roff: With the -x option, it is now possible to use ".de", ".ds",